# qpDUNES

./: .gitignore  CMakeLists.txt  Makefile  README.md  make_linux.mk
cmake/: FindqpDUNES.cmake  qpDUNES_env.sh.in
examples/: Makefile  doubleIntegrator_mpc.c  example1.c  nmpcPrototype.c
examples/matlab/: doubleIntegrator.m  qpExample_1.m
examples/matlab/benchmarks/doubleIntegrator/: doubleIntegrator_benchmark.m  doubleIntegrator_benchmarkMPC.m
examples/matlab/benchmarks/hangingChain/: hangingChainBenchmark.m
examples/matlab/benchmarks/wang2010/: runOscillator.m  setupOscillator.m
include/: qpDUNES.h
include/qp/: dual_qp.h  matrix_vector.h  setup_qp.h  stage_qp_solver_clipping.h  stage_qp_solver_qpoases.hpp  types.h  utils.h
interfaces/matlab/: make.m  mpcDUNES.cpp  qpDUNES.cpp  qpDUNES_matlab_utils.cpp  qpDUNES_options.m
interfaces/mpc/: Makefile  setup_mpc.c  setup_mpc.h
src/: Makefile  dual_qp.c  matrix_vector.c  qpdunes_utils.c  setup_qp.c  stage_qp_solver_clipping.c  stage_qp_solver_qpoases.cpp  utils.c
